[gd_scene load_steps=3 format=2]

[ext_resource path="res://Common/UI/PixelArialFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Common/UI/PropertySetter/PropertySetterNumeric.gd" type="Script" id=2]

[node name="PropertySetterNumeric" type="HBoxContainer"]
margin_right = 199.0
margin_bottom = 27.0
alignment = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingTitle" type="Label" parent="."]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
text = "Some Setting:"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 104.0
margin_right = 174.0
margin_bottom = 27.0
focus_mode = 1
custom_fonts/font = ExtResource( 1 )
placeholder_text = "0.0000"

[node name="Confirm" type="Button" parent="."]
margin_left = 178.0
margin_right = 199.0
margin_bottom = 27.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
text = ">"

[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="button_up" from="Confirm" to="." method="_on_Confirm_button_up"]
